fixing : problem the flex a salle archive for center items

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     </div>
                     <div id="salleArchive"
-                        class="fflex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
+                        class="flex flex-col bg-red-500 bg-opacity-50 border-black border-8 justify-center items-center w-full h-[260px] md:w-[300px] md:h-[300px] text-center">
                         <h1>Salle d’archives</h1>
                         <button id="archiveSalle" class="text-blue-600 text-6xl">+</button>
                         <ul id="assignedArchive">
